# my-app

./: pyproject.toml
.frontend/: next.config.json  package-lock.json  package.json
.frontend/app/components/: chat-section.tsx
.frontend/app/components/ui/chat/: resume-upload.tsx
.frontend/config/: tools.json
app/: settings.py
app/api/routers/: __init__.py  resume_analysis.py  upload_resume.py
config/: loaders.yaml  tools.yaml
